Update installation doc (#2019)
* Update installation doc

* Update install scripts

* Update install scripts

--- a/infra/dev/twenty-dev/Dockerfile
+++ b/infra/dev/twenty-dev/Dockerfile
@@ -21,7 +21,8 @@ WORKDIR /app
 COPY ../.. .
 
 WORKDIR /app/server
-RUN npx prisma generate
+RUN yarn database:setup
+RUN yarn database:reset
 
 WORKDIR /app
 
