--- a/server/package.json
+++ b/server/package.json
@@ -20,15 +20,23 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "./scripts/run-integration.sh",
+
     "prisma:generate-client": "npx prisma generate --generator client && yarn prisma:generate-gql-select",
     "prisma:generate-gql-select": "node scripts/generate-model-select-map.js",
     "prisma:generate-nest-graphql": "npx prisma generate --generator nestgraphql",
     "prisma:generate": "yarn prisma:generate-client && yarn prisma:generate-gql-select && yarn prisma:generate-nest-graphql",
-    "prisma:migrate": "npx prisma migrate deploy && npx ts-node ./scripts/setup-db.ts && yarn typeorm migration:run -- -d ./src/metadata/metadata.datasource.ts",
-    "prisma:seed": "npx prisma db seed",
     "prisma:reset": "npx prisma migrate reset && yarn prisma:generate",
+    "prisma:seed": "npx prisma db seed",
+    "prisma:migrate": "npx prisma migrate deploy",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "typeorm:migrate": "yarn typeorm migration:run -- -d ./src/metadata/metadata.datasource.ts"
+    "typeorm:migrate": "yarn typeorm migration:run -- -d ./src/metadata/metadata.datasource.ts",
+
+    "database:setup": "npx ts-node ./scripts/setup-db.ts",
+    "database:migrate": "yarn prisma:migrate && yarn typeorm:migrate",
+    "database:generate": "yarn prisma:generate",
+    "database:seed": "yarn prisma:seed",
+    "database:reset": "yarn database:migrate && yarn database:generate && yarn database:seed"
+    
   },
   "dependencies": {
     "@apollo/server": "^4.7.3",
