Create page Object Field Step 2 (#2068)
* create page

* change runs-on param

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -69,7 +69,7 @@ jobs:
             "yarn storybook:pages:coverage"
   front-modules-sb-test:
     needs: front-yarn-install
-    runs-on: ubuntu-latest
+    runs-on: ci-4-cores
     env:
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
     steps:
