--- a/front/package.json
+++ b/front/package.json
@@ -76,12 +76,14 @@
     "storybook:test-slow": "test-storybook --maxWorkers=3",
     "storybook:build": "storybook build -s public",
     "storybook:coverage": "test-storybook --coverage --maxWorkers=3 && npx nyc report --reporter=lcov -t coverage/storybook --report-dir coverage/storybook --check-coverage",
-    "storybook:modules:dev": "STORYBOOK_STORIES_FOLDER=modules yarn storybook:dev",
-    "storybook:pages:dev": "STORYBOOK_STORIES_FOLDER=pages yarn storybook:dev",
-    "storybook:modules:build": "STORYBOOK_STORIES_FOLDER=modules yarn storybook:build",
-    "storybook:pages:build": "STORYBOOK_STORIES_FOLDER=pages yarn storybook:build",
-    "storybook:modules:coverage": "STORYBOOK_STORIES_FOLDER=modules yarn storybook:coverage",
-    "storybook:pages:coverage": "STORYBOOK_STORIES_FOLDER=pages yarn storybook:coverage",
+    "storybook:modules:dev": "STORYBOOK_SCOPE=modules yarn storybook:dev",
+    "storybook:pages:dev": "STORYBOOK_SCOPE=pages yarn storybook:dev",
+    "storybook:docs:dev": "STORYBOOK_SCOPE=ui-docs yarn storybook:dev",
+    "storybook:modules:build": "STORYBOOK_SCOPE=modules yarn storybook:build",
+    "storybook:pages:build": "STORYBOOK_SCOPE=pages yarn storybook:build",
+    "storybook:docs:build": "STORYBOOK_SCOPE=ui-docs yarn storybook:build",
+    "storybook:modules:coverage": "STORYBOOK_SCOPE=modules yarn storybook:coverage",
+    "storybook:pages:coverage": "STORYBOOK_SCOPE=pages yarn storybook:coverage",
     "graphql:data:generate": "dotenv cross-var graphql-codegen -- --config codegen.js",
     "graphql:metadata:generate": "dotenv cross-var graphql-codegen -- --config codegen-metadata.js",
     "chromatic": "dotenv cross-var npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
