--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,6 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "./scripts/run-integration.sh",
-
     "prisma:generate-client": "npx prisma generate --generator client && yarn prisma:generate-gql-select",
     "prisma:generate-gql-select": "node scripts/generate-model-select-map.js",
     "prisma:generate-nest-graphql": "npx prisma generate --generator nestgraphql",
@@ -30,13 +29,12 @@
     "prisma:migrate": "npx prisma migrate deploy",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migrate": "yarn typeorm migration:run -- -d ./src/metadata/metadata.datasource.ts",
-
+    "database:init": "yarn database:setup && yarn database:reset",
     "database:setup": "npx ts-node ./scripts/setup-db.ts",
-    "database:migrate": "yarn prisma:migrate && yarn typeorm:migrate",
+    "database:migrate": "yarn typeorm:migrate && yarn prisma:migrate",
     "database:generate": "yarn prisma:generate",
     "database:seed": "yarn prisma:seed",
-    "database:reset": "yarn database:migrate && yarn database:generate && yarn database:seed"
-    
+    "database:reset": "yarn database:generate && yarn database:migrate && yarn database:seed"
   },
   "dependencies": {
     "@apollo/server": "^4.7.3",
