--- a/server/.env.example
+++ b/server/.env.example
@@ -27,3 +27,5 @@ SIGN_IN_PREFILLED=true
 # SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 # LOG_LEVEL=error,warn
 # FLEXIBLE_BACKEND_ENABLED=false
+# IS_DATA_MODEL_SETTINGS_ENABLED=false
+# IS_DEVELOPERS_SETTINGS_ENABLED=false
