chore: Pre build docker images (#2099) (#2131)
chore: LABEL to link images source to github

--- a/infra/prod/front/Dockerfile
+++ b/infra/prod/front/Dockerfile
@@ -21,5 +21,7 @@ WORKDIR /app/front
 COPY --from=build /app/front/build ./build
 
 RUN yarn global add serve
+LABEL org.opencontainers.image.source=https://github.com/twentyhq/twenty
+LABEL org.opencontainers.image.description="This image provides a consistent and reproducible environment for the frontend."
 
 CMD ["serve", "build"]
