--- a/infra/prod/server/Dockerfile
+++ b/infra/prod/server/Dockerfile
@@ -11,4 +11,7 @@ RUN npx prisma generate
 
 RUN yarn build
 
+LABEL org.opencontainers.image.source=https://github.com/twentyhq/twenty
+LABEL org.opencontainers.image.description="This image provides a consistent and reproducible environment for the backend, ensuring it deploys faster and runs the same way regardless of the deployment environment."
+
 CMD ["node", "dist/src/main"]
