--- a/infra/prod/docs/Dockerfile
+++ b/infra/prod/docs/Dockerfile
@@ -12,5 +12,7 @@ COPY ./docs .
 RUN npm run build
 
 RUN yarn global add serve
+LABEL org.opencontainers.image.source=https://github.com/twentyhq/twenty
+LABEL org.opencontainers.image.description="This image provides a consistent and reproducible environment for the documentation."
 
 CMD ["serve", "-s", "./build"]
