fix 2049 timebox 1j zapier integration 4 define and implement a first trigger for zapier app (#2139)
Update dotenv dependency

--- a/packages/twenty-zapier/package.json
+++ b/packages/twenty-zapier/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "prettier": "^3.0.3",
-    "zapier-platform-core": "15.4.1"
+    "zapier-platform-core": "15.4.1",
+    "dotenv-cli": "^7.2.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
@@ -27,7 +28,6 @@
     "jest": "^29.6.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
-    "dotenv-cli": "^7.2.1",
     "zapier-platform-cli": "^15.4.1"
   },
   "private": true,
