--- a/infra/prod/server/Dockerfile
+++ b/infra/prod/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18.16.0-alpine as server
+FROM node:18.16.0-alpine as build
 
 WORKDIR /app/server
 COPY ./server/package.json ./
@@ -10,6 +10,12 @@ COPY ./server .
 RUN npx prisma generate
 
 RUN yarn build
+
+FROM node:18.16.0-alpine as server
+
+COPY --from=build /app/server/dist ./dist
+
+WORKDIR /app/server
 
 LABEL org.opencontainers.image.source=https://github.com/twentyhq/twenty
 LABEL org.opencontainers.image.description="This image provides a consistent and reproducible environment for the backend, ensuring it deploys faster and runs the same way regardless of the deployment environment."
