Chore(front): Add more typeguards (#2136)
* Chore(front): Add more typeguards

Co-authored-by: Benjamin Mayanja V <vibenjamin6@gmail.com>
Co-authored-by: KlingerMatheus <klinger.matheus@gitstart.dev>

* Remove source map generation to avoid warnings

---------

Co-authored-by: Benjamin Mayanja V <vibenjamin6@gmail.com>
Co-authored-by: KlingerMatheus <klinger.matheus@gitstart.dev>
Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/front/.env.example
+++ b/front/.env.example
@@ -1,4 +1,5 @@
 REACT_APP_SERVER_BASE_URL=http://localhost:3000
+GENERATE_SOURCEMAP=false
 
 # ———————— Optional ————————
 # REACT_APP_SERVER_AUTH_URL=http://localhost:3000/auth
