--- a/server/.env.example
+++ b/server/.env.example
@@ -14,7 +14,7 @@ SIGN_IN_PREFILLED=true
 # DEBUG_MODE=true
 # ACCESS_TOKEN_EXPIRES_IN=30m
 # LOGIN_TOKEN_EXPIRES_IN=15m
-# API_TOKEN_EXPIRES_IN=2y
+# API_TOKEN_EXPIRES_IN=1000y
 # REFRESH_TOKEN_EXPIRES_IN=90d 
 # FRONT_AUTH_CALLBACK_URL=http://localhost:3001/verify 
 # AUTH_GOOGLE_ENABLED=false
