--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext", "ES2023", "ES2023.Array"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
