--- a/server/package.json
+++ b/server/package.json
@@ -24,17 +24,16 @@
     "prisma:generate-gql-select": "node scripts/generate-model-select-map.js",
     "prisma:generate-nest-graphql": "npx prisma generate --generator nestgraphql",
     "prisma:generate": "yarn prisma:generate-client && yarn prisma:generate-gql-select && yarn prisma:generate-nest-graphql",
-    "prisma:reset": "npx prisma migrate reset && yarn prisma:generate",
     "prisma:seed": "npx prisma db seed",
     "prisma:migrate": "npx prisma migrate deploy",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migrate": "yarn typeorm migration:run -d ./src/metadata/metadata.datasource.ts",
     "database:init": "yarn database:setup && yarn database:seed",
-    "database:setup": "npx ts-node ./scripts/setup-db.ts && yarn database:migrate",
+    "database:setup": "npx ts-node ./scripts/setup-db.ts && yarn database:migrate && yarn database:generate",
     "database:truncate": "npx ts-node ./scripts/truncate-db.ts",
     "database:migrate": "yarn typeorm:migrate && yarn prisma:migrate",
     "database:generate": "yarn prisma:generate",
-    "database:seed": "yarn prisma:seed",
+    "database:seed": "yarn prisma:seed && yarn command tenant:sync-metadata -w twenty-7ed9d212-1c25-4d02-bf25-6aeccf7ea419 && yarn command tenant:migrate -w twenty-7ed9d212-1c25-4d02-bf25-6aeccf7ea419 && yarn command tenant:data-seed -w twenty-7ed9d212-1c25-4d02-bf25-6aeccf7ea419",
     "database:reset": "yarn database:truncate && yarn database:init",
     "command": "node dist/src/command"
   },
