--- a/infra/dev/Makefile
+++ b/infra/dev/Makefile
@@ -1,5 +1,8 @@
 build:
 	@docker compose down 
+	rm -rf ../../front/node_modules
+	rm -rf ../../server/node_modules
+	rm -rf ../../docs/node_modules
 	@docker volume rm dev_twenty_node_modules_front > /dev/null 2>&1 || true
 	@docker volume rm dev_twenty_node_modules_server > /dev/null 2>&1 || true
 	@docker volume rm dev_twenty_node_modules_docs > /dev/null 2>&1 || true
