Improved user guide, added CI vale for docs  (#2308)
* restructured user guide, minor fixes

* added index file for user guide

* github actions for vale

* testing workflow

* CI vale

* changes as per vale's suggestions

* set CI vale on pull request

* adding homebrew script to macos infra setup file

* fix CI errors

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* testing vale

* vale testing complete

* vale cleanup

* vale test

* vale test for github-pr-check

* vale test for github-pr-check

* vale test for github-pr-check

* vale test for github-pr-check

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* testing vale warnings

* swizzled doc cards to add icons

* Align CI params to other CIs

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>

--- a/.github/styles/docs/Acronyms.yml
+++ b/.github/styles/docs/Acronyms.yml
@@ -12,6 +12,8 @@ exceptions:
   - ASP
   - CLI
   - CPU
+  - CMS
+  - CRM
   - CSS
   - CSV
   - DEBUG
@@ -22,6 +24,7 @@ exceptions:
   - GDB
   - GET
   - GPU
+  - GQL
   - GTK
   - GUI
   - HTML
@@ -36,6 +39,7 @@ exceptions:
   - NET
   - NOTE
   - NVDA
+  - ORM
   - OSS
   - PATH
   - PDF
@@ -58,6 +62,7 @@ exceptions:
   - URL
   - USB
   - UTF
+  - WSL
   - XML
   - XSS
   - YAML
