--- a/.vale.ini
+++ b/.vale.ini
@@ -1,4 +1,4 @@
-StylesPath = docs/vale/styles
+StylesPath = .github/styles
 
 MinAlertLevel = suggestion
 
@@ -6,6 +6,11 @@ Packages = write-good
 
 [*.{md,mdx}]
 BasedOnStyles = Vale, write-good, docs
+Vale.Spelling=warning
+write-good.E-Prime=No
+write-good.So=No
+write-good.ThereIs=No
+Vale.Terms=No
 
 
 [formats]
