--- a/.github/workflows/ci-chromatic.yaml
+++ b/.github/workflows/ci-chromatic.yaml
@@ -13,6 +13,10 @@ jobs:
     env:
       REACT_APP_SERVER_BASE_URL: http://127.0.0.1:3000
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.11.0
+        with:
+            access_token: ${{ github.token }}
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
