--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -145,7 +145,7 @@ jobs:
       - name: Front / Install Dependencies
         run: cd front && yarn
       - name: Front / Run linter
-        run: cd front && yarn lint
+        run: cd front && yarn lint --config .eslintrc-ci.js
   front-jest:
     needs: front-yarn-install
     runs-on: ubuntu-latest
