--- a/server/package.json
+++ b/server/package.json
@@ -87,6 +87,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.isempty": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.isobject": "^3.0.2",
     "lodash.kebabcase": "^4.1.1",
     "lodash.merge": "^4.6.2",
@@ -123,6 +124,7 @@
     "@types/graphql-upload": "^8.0.12",
     "@types/jest": "28.1.8",
     "@types/lodash.isempty": "^4.4.7",
+    "@types/lodash.isequal": "^4.5.7",
     "@types/lodash.isobject": "^3.0.7",
     "@types/lodash.kebabcase": "^4.1.7",
     "@types/lodash.snakecase": "^4.1.7",
