changes as per vale warnings (#2353)
* changes as per vale warnings

* changes acc to feedback

--- a/.github/styles/docs/Acronyms.yml
+++ b/.github/styles/docs/Acronyms.yml
@@ -45,6 +45,7 @@ exceptions:
   - PDF
   - PHP
   - POST
+  - PII
   - RAM
   - REPL
   - RSA
@@ -58,6 +59,7 @@ exceptions:
   - TBD
   - TCP
   - TODO
+  - TSX
   - URI
   - URL
   - USB
