--- a/.github/styles/docs/TypeScript.yml
+++ b/.github/styles/docs/TypeScript.yml
@@ -1,6 +1,6 @@
 extends: existence
 message: "Consider using typescript instead of tsx"
-level: warning
+level: suggestion
 scope: raw
 ignorecase: true
 raw:
