fix-svgr-issue-with-tsup (#2429)

--- a/front/package.json
+++ b/front/package.json
@@ -127,6 +127,7 @@
     "@storybook/react-webpack5": "^7.0.22",
     "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -151,6 +152,7 @@
     "concurrently": "^8.0.1",
     "cross-var": "^1.1.0",
     "dotenv-cli": "^7.2.1",
+    "esbuild-plugin-svgr": "^2.1.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
