--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "name": "twenty",
-  "scripts": {
-    "release": "node infra/release/release.js"
-  },
-  "dependencies": {
-    "semver": "^7.5.4"
+  "devDependencies": {
+    "danger": "^11.3.0"
   }
 }
