--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
