--- a/packages/twenty-utils/package.json
+++ b/packages/twenty-utils/package.json
@@ -5,6 +5,7 @@
     "release": "node release.js"
   },
   "dependencies": {
+    "danger-plugin-todos": "^1.3.1",
     "semver": "^7.5.4"
   },
   "devDependencies": {
