--- a/packages/twenty-utils/package.json
+++ b/packages/twenty-utils/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "danger-plugin-todos": "^1.3.1",
-    "semver": "^7.5.4"
+    "semver": "^7.5.4",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "danger": "^11.3.0"
