--- a/server/package.json
+++ b/server/package.json
@@ -35,12 +35,12 @@
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/credential-providers": "^3.363.0",
     "@graphql-tools/schema": "^10.0.0",
-    "@graphql-yoga/nestjs": "^2.1.0",
+    "@graphql-yoga/nestjs": "2.1.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^12.0.8",
+    "@nestjs/graphql": "12.0.8",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
@@ -48,8 +48,8 @@
     "@nestjs/terminus": "^9.2.2",
     "@nestjs/typeorm": "^10.0.0",
     "@ptc-org/nestjs-query-core": "^4.2.0",
-    "@ptc-org/nestjs-query-graphql": "^4.2.0",
-    "@ptc-org/nestjs-query-typeorm": "^4.2.1-alpha.2",
+    "@ptc-org/nestjs-query-graphql": "4.2.0",
+    "@ptc-org/nestjs-query-typeorm": "4.2.1-alpha.2",
     "@sentry/node": "^7.66.0",
     "@sentry/tracing": "^7.66.0",
     "@types/lodash.camelcase": "^4.3.7",
