--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@air/react-drag-to-select": "^5.0.8",
-    "@apollo/client": "3.7.17",
+    "@apollo/client": "^3.7.17",
     "@blocknote/core": "^0.8.2",
     "@blocknote/react": "^0.8.2",
     "@chakra-ui/accordion": "^2.3.0",
