Renaming "Experience" to "Appearance" (#2776)
* refining settings

* Delete .idea/workspace.xml

* Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/**/.env
 .DS_Store
+.idea/workspace.xml
 node_modules/
 # yarn is the recommended package manager across the project
 .package-lock.json
