add message queue integration (#2491)

--- a/server/package.json
+++ b/server/package.json
@@ -59,6 +59,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "bullmq": "^4.14.0",
     "bytes": "^3.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -89,6 +90,7 @@
     "passport-local": "^1.0.0",
     "patch-package": "^8.0.0",
     "pg": "^8.11.3",
+    "pg-boss": "^9.0.3",
     "postinstall-postinstall": "^2.1.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
