--- a/server/.env.example
+++ b/server/.env.example
@@ -26,3 +26,6 @@ SIGN_IN_PREFILLED=true
 # LOGGER_DRIVER=console
 # SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 # LOG_LEVEL=error,warn
+# MESSAGE_QUEUE_TYPE=pg-boss
+# REDIS_HOST=127.0.0.1
+# REDIS_PORT=6379
