--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,7 @@ PG_DATABASE_URL=postgres://twenty:twenty@localhost:5432/default
 # PG_DATABASE_URL=postgres://twenty:twenty@postgres:5432/default?connection_limit=1
 
 FRONT_BASE_URL=http://localhost:3001
+LOCAL_SERVER_URL=http://localhost:3000
 ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
 LOGIN_TOKEN_SECRET=replace_me_with_a_random_string_login
 REFRESH_TOKEN_SECRET=replace_me_with_a_random_string_refresh
