--- a/server/.env.example
+++ b/server/.env.example
@@ -30,3 +30,4 @@ SIGN_IN_PREFILLED=true
 # MESSAGE_QUEUE_TYPE=pg-boss
 # REDIS_HOST=127.0.0.1
 # REDIS_PORT=6379
+# DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
