--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,12 @@
     "test:e2e": "./scripts/run-integration.sh",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migrate": "yarn typeorm migration:run -d ./src/database/typeorm/metadata/metadata.datasource.ts && yarn typeorm migration:run -d ./src/database/typeorm/core/core.datasource.ts",
-    "database:init": "yarn database:setup && yarn database:seed",
+    "database:init": "yarn database:setup && yarn database:seed:dev",
     "database:setup": "npx ts-node ./scripts/setup-db.ts && yarn database:migrate",
     "database:truncate": "npx ts-node ./scripts/truncate-db.ts",
     "database:migrate": "yarn build && yarn typeorm:migrate",
-    "database:seed": "yarn build && yarn command workspace:seed",
+    "database:seed:dev": "yarn build && yarn command workspace:seed:dev",
+    "database:seed:demo": "yarn build && yarn command workspace:seed:demo",
     "database:reset": "yarn database:truncate && yarn database:init",
     "command": "node dist/src/command"
   },
