--- a/server/package.json
+++ b/server/package.json
@@ -84,6 +84,7 @@
     "lodash.merge": "^4.6.2",
     "lodash.snakecase": "^4.1.1",
     "lodash.upperfirst": "^4.3.1",
+    "microdiff": "^1.3.2",
     "nest-commander": "^3.12.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
