feat: better server lint (#2850)
* feat: add stylistic eslint plugin

* feat: add missing line return

* feat: secure line-break style

* feat: disallow break before else

* feat: line between class members

* feat: better new line lint rule

--- a/server/package.json
+++ b/server/package.json
@@ -106,6 +106,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@stylistic/eslint-plugin": "^1.5.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bytes": "^3.1.1",
     "@types/express": "^4.17.13",
