Throw an error if workspace id has no object (#2857)
* Throw an error if workspace id has no object

* Request only plurial object names

* Fix tests

* Fix query

* Handle graphql errors

--- a/server/.env.example
+++ b/server/.env.example
@@ -30,3 +30,4 @@ SIGN_IN_PREFILLED=true
 # REDIS_HOST=127.0.0.1
 # REDIS_PORT=6379
 # DEMO_WORKSPACE_IDS=REPLACE_ME_WITH_A_RANDOM_UUID
+# SERVER_URL=http://localhost:3000
