--- a/server/.env.example
+++ b/server/.env.example
@@ -24,6 +24,7 @@ SIGN_IN_PREFILLED=true
 # SUPPORT_FRONT_HMAC_KEY=replace_me_with_front_chat_verification_secret
 # SUPPORT_FRONT_CHAT_ID=replace_me_with_front_chat_id
 # LOGGER_DRIVER=console
+# EXCEPTION_HANDLER_DRIVER=sentry
 # SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 # LOG_LEVEL=error,warn
 # MESSAGE_QUEUE_TYPE=pg-boss
