--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "lodash.camelcase": "^4.3.0",
     "lodash.debounce": "^4.0.8",
     "lodash.kebabcase": "^4.1.1",
+    "lodash.snakecase": "^4.1.1",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-data-grid": "7.0.0-beta.13",
@@ -138,6 +139,7 @@
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.kebabcase": "^4.1.7",
+    "@types/lodash.snakecase": "^4.1.9",
     "@types/luxon": "^3.3.0",
     "@types/react-datepicker": "^4.11.2",
     "@types/scroll-into-view": "^1.16.0",
