2814 timebox create a poc to test the gmail api (#2868)
* create gmail strategy and controller

* gmail button connect

* wip

* trying to fix error { error: 'invalid_grant', error_description: 'Bad Request' }

* access token working

* refresh token working

* Getting the short term token from the front is working

* working

* rename token

* remove comment

* rename env var

* move file

* Fix

* Fix

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/server/.env.example
+++ b/server/.env.example
@@ -18,6 +18,11 @@ SIGN_IN_PREFILLED=true
 # REFRESH_TOKEN_EXPIRES_IN=90d 
 # FRONT_AUTH_CALLBACK_URL=http://localhost:3001/verify 
 # AUTH_GOOGLE_ENABLED=false
+# MESSAGING_PROVIDER_GMAIL_ENABLED=false
+# AUTH_GOOGLE_CLIENT_ID=replace_me_with_google_client_id
+# AUTH_GOOGLE_CLIENT_SECRET=replace_me_with_google_client_secret
+# AUTH_GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/redirect
+# MESSAGING_PROVIDER_GMAIL_CALLBACK_URL=http://localhost:3000/auth/google-gmail/get-access-token
 # STORAGE_TYPE=local
 # STORAGE_LOCAL_PATH=.local-storage
 # SUPPORT_DRIVER=front
