--- a/server/.env.test
+++ b/server/.env.test
@@ -19,5 +19,6 @@ REFRESH_TOKEN_SECRET=secret_refresh_token
 # REFRESH_TOKEN_EXPIRES_IN=90d 
 # FRONT_AUTH_CALLBACK_URL=http://localhost:3001/verify 
 # AUTH_GOOGLE_ENABLED=false
+# MESSAGING_PROVIDER_GMAIL_ENABLED=false
 # STORAGE_TYPE=local
 # STORAGE_LOCAL_PATH=.local-storage 
