--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "@apollo/server": "^4.7.3",
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/credential-providers": "^3.363.0",
+    "@google-cloud/local-auth": "2.1.0",
     "@graphql-tools/schema": "^10.0.0",
     "@graphql-yoga/nestjs": "2.1.0",
     "@nestjs/apollo": "^11.0.5",
@@ -68,6 +69,7 @@
     "dataloader": "^2.2.2",
     "date-fns": "^2.30.0",
     "file-type": "16.5.4",
+    "googleapis": "105",
     "graphql": "16.8.0",
     "graphql-fields": "^2.0.3",
     "graphql-subscriptions": "2.0.0",
