--- a/packages/twenty-docker/dev/twenty-dev/Dockerfile
+++ b/packages/twenty-docker/dev/twenty-dev/Dockerfile
@@ -1,21 +1,17 @@
 FROM node:18.16-bullseye as twenty-dev
 
-COPY /../../packages /app/packages
-
-WORKDIR /app/front
-
-COPY ../../front/package.json .
-COPY ../../front/yarn.lock .
-RUN yarn install
-RUN npx playwright install-deps 
-
-WORKDIR /app/server
-
-COPY ../../server/package.json .
-COPY ../../server/yarn.lock .
-COPY ../../server/patches ./patches
-RUN yarn install
-
 WORKDIR /app
+COPY ../../../../package.json .
+COPY ../../../../yarn.lock .
+COPY ../../../../.yarnrc.yml .
+COPY ../../../packages/twenty-front/package.json /app/packages/twenty-front/package.json
+COPY ../../../packages/twenty-server/package.json /app/packages/twenty-server/package.json
+COPY ../../../packages/twenty-eslint-plugin/package.json /app/packages/twenty-eslint-plugin/package.json
+
+RUN corepack enable
+RUN yarn set version 4.0.2
+RUN yarn
+
+RUN npx playwright install-deps 
 
 CMD ["tail", "-f", "/dev/null"]
