--- a/packages/twenty-docker/dev/twenty-docs/Dockerfile
+++ b/packages/twenty-docker/dev/twenty-docs/Dockerfile
@@ -1,11 +1,15 @@
-FROM node:18.16-bullseye as docs
+FROM node:18.16-bullseye as twenty-docs
 
-WORKDIR /app/docs
+WORKDIR /app
 
-COPY ../../docs/package.json .
-COPY ../../docs/yarn.lock .
+COPY ../../../../package.json .
+COPY ../../../../yarn.lock .
+COPY ../../../../.yarnrc.yml .
+COPY ../../../packages/twenty-docs/package.json /app/packages/twenty-docs/package.json
+
+RUN yarn set version 4.0.2
 RUN yarn
 
-COPY ../../docs .
+WORKDIR /app/packages/twenty-docs
 
-CMD ["yarn", "start"]
+CMD ["tail", "-f", "/dev/null"]
