--- a/packages/twenty-docker/dev/docker-compose.yml
+++ b/packages/twenty-docker/dev/docker-compose.yml
@@ -2,27 +2,33 @@ version: "3.9"
 services:
   twenty-dev:
     build: 
-      context: ../..
-      dockerfile: ./infra/dev/twenty-dev/Dockerfile
+      context: ../../..
+      dockerfile: ./packages/twenty-docker/dev/twenty-dev/Dockerfile
     ports:
       - "3000:3000"
       - "3001:3001"
       - "6006:6006"
     volumes:
-      - ../..:/app
-      - /app/front/node_modules
-      - /app/server/node_modules
+      - ../../../packages/twenty-front:/app/packages/twenty-front
+      - ../../../packages/twenty-server:/app/packages/twenty-server
+      - ../../../packages/twenty-eslint-plugin:/app/packages/twenty-eslint-plugin
+      - twenty_dev_node_modules_root:/app/node_modules
+      - twenty_dev_node_modules_yarn:/app/.yarn
+      - twenty_dev_node_modules_front:/app/packages/twenty-front/node_modules
+      - twenty_dev_node_modules_server:/app/packages/twenty-server/node_modules
     depends_on:
       - postgres
   twenty-docs:
     build:
-      context: ../..
-      dockerfile: ./infra/dev/twenty-docs/Dockerfile
+      context: ../../..
+      dockerfile: ./packages/twenty-docker/dev/twenty-docs/Dockerfile
     ports:
       - "5001:5001"
     volumes:
-      - ../../docs:/app/docs
-      - twenty_node_modules_docs:/app/docs/node_modules
+      - ../../../packages/twenty-docs:/app/packages/twenty-docs
+      - twenty_docs_node_modules_root:/app/node_modules
+      - twenty_docs_node_modules_yarn:/app/.yarn
+      - twenty_docs_node_modules_docs:/app/packages/twenty-docs/node_modules
   postgres:
     container_name: twenty_postgres
     build: ./postgres
@@ -37,6 +43,10 @@ services:
 volumes:
   twenty_db_data:
     name: twenty_db_data
-  twenty_node_modules_front:
-  twenty_node_modules_server:
-  twenty_node_modules_docs:
+  twenty_dev_node_modules_root:
+  twenty_dev_node_modules_yarn:
+  twenty_dev_node_modules_front:
+  twenty_dev_node_modules_server:
+  twenty_docs_node_modules_root:
+  twenty_docs_node_modules_yarn:
+  twenty_docs_node_modules_docs:
