Fix docker install (#2925)
* Fix docker install

* Move back twenty-eslint-plugin to eslint-plugin-twenty

* fix: add bundled yarn

* Improve makeifle structure

* Update commands and doc

* Add pg_graphql binaries

* Fix

---------

Co-authored-by: Jérémy Magrin <jeremy.magrin@gmail.com>

--- a/packages/eslint-plugin-twenty/package.json
+++ b/packages/eslint-plugin-twenty/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twenty-eslint-plugin",
+  "name": "eslint-plugin-twenty",
   "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
