--- a/packages/twenty-docker/Makefile
+++ b/packages/twenty-docker/Makefile
@@ -17,16 +17,7 @@ dev-down:
 dev-sh:
 	@docker compose -f dev/docker-compose.yml exec twenty-dev sh
 
-dev-front-start:
-	@docker compose -f dev/docker-compose.yml exec twenty-dev sh -c "cd /app/packages/twenty-front && yarn run start"
-
-dev-server-start:
-	@docker compose -f dev/docker-compose.yml exec twenty-dev sh -c "yarn nx run twenty-server:start:dev"
-
-dev-server-database-init:
-	@docker compose -f dev/docker-compose.yml exec twenty-dev sh -c "yarn nx run twenty-server:database:init"
-
-dev-build-postgres:
+dev-postgres-build:
 	@docker stop twenty_postgres || true
 	@docker rm twenty_postgres || true
 	@docker volume rm twenty_db_data || true
