--- a/packages/twenty-docker/dev/twenty-docs/Dockerfile
+++ b/packages/twenty-docker/dev/twenty-docs/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR /app
 COPY ../../../../package.json .
 COPY ../../../../yarn.lock .
 COPY ../../../../.yarnrc.yml .
+COPY ../../../../.yarn/releases /app/.yarn/releases
 COPY ../../../packages/twenty-docs/package.json /app/packages/twenty-docs/package.json
 
-RUN yarn set version 4.0.2
 RUN yarn
 
 WORKDIR /app/packages/twenty-docs
