--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build && yarn build:inject-runtime-env",
     "build:inject-runtime-env": "./scripts/inject-runtime-env.sh",
     "preview": "vite preview",
-    "eslint-plugin:setup": "cd ../packages/twenty-eslint-plugin/ && yarn && yarn build && cd ../../front/ && yarn upgrade twenty-eslint-plugin",
+    "eslint-plugin:setup": "cd ../packages/eslint-plugin-twenty/ && yarn && yarn build && cd ../../front/ && yarn upgrade eslint-plugin-twenty",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
@@ -140,6 +140,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-twenty": "file:../eslint-plugin-twenty",
     "eslint-plugin-unused-imports": "^3.0.0",
     "http-server": "^14.1.1",
     "jest": "29.7.0",
@@ -150,7 +151,6 @@
     "storybook": "^7.6.3",
     "storybook-addon-cookie": "^3.1.0",
     "storybook-addon-pseudo-states": "^2.1.2",
-    "twenty-eslint-plugin": "file:../twenty-eslint-plugin",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0"
