--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -1,7 +1,7 @@
 # Use this for local setup
 PG_DATABASE_URL=postgres://twenty:twenty@localhost:5432/default
 # Use this for docker setup
-# PG_DATABASE_URL=postgres://twenty:twenty@postgres:5432/default?connection_limit=1
+# PG_DATABASE_URL=postgres://twenty:twenty@postgres:5432/default
 
 FRONT_BASE_URL=http://localhost:3001
 ACCESS_TOKEN_SECRET=replace_me_with_a_random_string_access
